--- a/index.ipynb
+++ b/index.ipynb
@@ -491,7 +491,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = unique_countries.len()\n",
+    "num_of_repeats = unique_countries.len() - countries\n",
     "num_of_repeats # 3"
    ]
   },
